Changed to JFX25 with Richtext control